side, wrap: fixed and padding

--- a/apphome/src/app/home/home1/home1.component.scss
+++ b/apphome/src/app/home/home1/home1.component.scss
@@ -216,6 +216,7 @@ Responsive
 
 @media(max-width:767px){
     .banner{
+        padding-top: 50px; //change padding
         .row{
             .content{
                 text-align: center;
